================================================================================
Version 2.1 (In progress)
================================================================================

Added the "white" source type (uniform energy distribution between user-set
	limits; default: 100 keV ... 10 MeV).

TrackingAction now writes dta in % (for GrROOT compatibility).

Fine-tuning of examples.

================================================================================
Version 2.0
================================================================================
L. Riley April 2013

Mode 2 output with decomposed gamma-ray events (GEB type 1), simulated
    S800 events (GEB type 9), and events with energies, emission
    positions, and emission directions of simulated gammas (GEB type
    11). Added TrackingAction and EventInformation classes to store
    outgoing reaction product and emitted gamma-ray information for output
    by the EventAction class.

Now reads the binary crmat file (crmat.LINUX).

Added G4Timers to the main and EventAction to report on overall timing and
	progress.

Updated examples using GrROOT package for sorting.

================================================================================
Version 1.3.0
================================================================================
L. Riley  March 2013

New solid file in the GretinaGeometry with 1.5 mm back dead layer and
	3.5 mm coaxial dead layer from a minimization of the residual
	between simulated photopeak efficiencies (152Eu and 56Co) and
	those measured at the NSCL in September 2012.

Added an optional level scheme file specifying the portion of the
	level scheme of the reaction product accessible via de-excitation
	of the initial state. Multiple decay branches, individual level
	lifetimes, and individual gamma-ray angular distributions are
	supported. (Individual gamma-ray angular distributions are
	implemented but untested.)
